grammar.js
    source_file: $ => seq(
      semi_sep($.import),
      semi_sep($._dec),
    ),

    // Comments
    line_comment: $ => token(seq("//", /[^\n]*/)),
    block_comment: $ => seq("/*", optional($.comment_text), "*/"),
    comment_text: $ => repeat1(/.|\n|\r/),

    // Identifiers
    identifier: $ => /[a-zA-Z_][a-zA-Z_0-9]*/,
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    tag_identifier: $ => seq("#", $.identifier),
    text_literal: $ => /"(?:\\[unrt\\"'0-9a-fA-F]|[^\\"])*"/,
    float_literal: $ => token(choice(
      /[0-9_]+\.[0-9_]*/,
      /[0-9_]+(\.[0-9_]*)?[eE][+-]?[0-9_]+/,
      /0x[0-9a-fA-F_]+\.[0-9a-fA-F_]*/,
      /0x[0-9a-fA-F_]+(\.[0-9a-fA-F_]*)?[pP][+-]?[0-9_]+/,
    )),
    int_literal: $ => /[0-9_]+/,
    hex_literal: $ => /0x[0-9a-fA-F_]+/,
    null_literal: $ => "null",
    _literal: $ => choice(
      $.text_literal,
      $.char_literal,
      $.float_literal,
      $.int_literal,
      $.hex_literal,
      $.bool_literal,
      $.null_literal,
    ),

    // Misc
    typ_annot: $ => prec.right(seq(":", $._typ)),
    typ_path: $ => seq(
      repeat(seq($.identifier, ".")),
      $._type_identifier,
    ),
    unop: $ => choice(
      "+",
      "-",
      "^",
    ),
    binassign_op: $ => choice(
      "+=",
      "-=",
      "*=",
      "/=",
      "%=",
      "#=",
      "**=",
      "+%=",
      "-%=",
      "*%=",
      "**%=",
      "&=",
      "|=",
      "^=",
      "<<=",
      ">>=",
      "<<>=",
      "<>>=",
      "@=",
    ),
    // TODO: Get the precedences for these right (but only if it
    // doesn't affect the state count too much)
    rel_op: $ => choice(
      "==",
      "!=",
      // NOTE(def: leading-ws-bug): The lexer in the compiler
      // distinguishes these operators from type-parameter
      // instantiations by requiring that they are surrounded with
      // whitespace. While tree-sitter let's us do that with " <" and
      // " >", it triggers the bug in
      // https://github.com/tree-sitter/tree-sitter/issues/4091. So
      // instead we mark the `<` tokens for instantiations as
      // `token.immediate`, meaning they they must not be preceeded by
      // whitespace instead.
      ">",
      "<",
      "<=",
      ">=",
      "<<",
      ">>",
      "<<>",
      "<>>",
    ),
    bin_op: $ => choice(
      "|>",
      "or",
      "and",
      "+",
      "-",
      "*",
      "/",
      "%",
      "+%",
      "-%",
      "*%",
      "|",
      "&",
      "^",
      "#",
      "**",
      "**%",
    ),

    // `??` is the coalescing operator only when whitespace follows, as in the compiler's lexer:
    // `??x` is `?(?x)`, so `if (c) ??x else y` keeps its bare branch. The whitespace is part of the token.
    _dec: $ => choice(
      $._dec_non_exp,
      $.exp_dec,
      $.let_else_dec,
    ),
    exp_dec: $ => $._exp_non_dec_object,

    let_dec: $ => seq(
      "let",
      $._pat,
      optional(seq(
        "=",
        $._exp_object,
      ))
    ),
    _exp_object: $ => mk_exp($, "object"),

    _exp_non_dec_object: $ => mk_exp_non_dec($, "object"),

    _exp_post_object: $ => mk_exp_post($, "object"),

    _exp_nullary_object: $ => mk_exp_nullary($, "object"),

    _exp_unary_object: $ => mk_exp_unary($, "object"),

    _exp_nullary_head: $ => mk_exp_nullary($, "head"),
    _exp_head: $ => choice(
      mk_exp_post_ext($, "head"),
      mk_exp_un_ext($, "head"),
      bin_exp($, "head"),
      annot_exp($, "head"),
      coalesce_exp($, "head"),
      alias($.await_exp_head, $.await_exp),
      alias($.awaitstar_exp_head, $.awaitstar_exp),
      alias($.awaitquest_exp_head, $.awaitquest_exp),
      $.do_exp,
      $.do_quest_exp,
    ),

    // The one head grammar shared by `if`, `while`, `switch` and `for`:
    // an atom or an extended head.
    _head: $ => choice(
      $._exp_nullary_head,
      $._exp_head,
    ),

    _exp_nest: $ => choice(
      $.block_exp,
      $._exp_block,
    ),

    lit_exp: $ => $._literal,
    par_exp: $ => seq("(", comma_sep($._exp_object), ")"),
    var_exp: $ => $.identifier,
    // `if` has two coupled shapes. An atomic head keeps
    // the free-form branches Motoko always had; an extended head demands
    // braced branches, with `else if` chains allowed. A record literal as
    // head needs parentheses, so the head is never in object mode.
    if_exp: $ => choice(
      prec.right(seq(
        "if",
        field("condition", $._exp_nullary_head),
        field("then", $._exp_nest),
        optional(seq(
          "else",
          field("else", $._exp_nest),
        ))
      )),
      prec.right(seq(
        "if",
        field("condition", $._exp_head),
        field("then", $.block_exp),
        optional(seq(
          "else",
          field("else", $._else_branch),
        ))
      )),
    ),
    // `else if` chains only into the braced shape, so a legacy bare-branch
    // `if` cannot ride on an extended head.
    _else_branch: $ => choice(
      $.block_exp,
      alias($._if_braced, $.if_exp),
    ),
    object_exp: $ => seq(
      "{",
      choice(
        semi_sep($.exp_field),
        seq(
          $._exp_post_object,
          repeat1(seq("and", $._exp_post_object))
        ),
        seq(
          $._exp_post_object,
          repeat(seq("and", $._exp_post_object)),
          "with",
          semi_sep1($.exp_field),
        ),
      ),
      "}",
    ),
    array_exp: $ => seq(
      "[",
      optional("var"),
      comma_sep($._exp_object),
      "]"
    ),
    block_exp: $ => seq(
      "{",
      semi_sep($._dec),
      "}"
    ),
    hash_exp: $ => seq(
      $.tag_identifier,
      optional($._exp_nullary_object),
    ),
    quest_exp: $ => seq("?", $._exp_unary_object),
    unop_exp: $ => seq(
      $.unop,
      $._exp_unary_object,
    ),
    not_exp: $ => seq(
      "not",
      $._exp_unary_object,
    ),
    return_exp: $ => prec.right(seq(
      "return",
      optional($._exp_object),
    )),

    awaitquest_exp: $ => seq(
      "await?",
      $._exp_nest,
    ),

    label_exp: $ => seq(
      "label",
      field("label", $.identifier),
      optional($.typ_annot),
      $._exp_nest,
    ),

    // `break l e` takes any expression, like `return e`
    // TODO(id: prec.nonassoc)
    break_exp: $ => prec.right(seq(
      "break",
      optional(seq(
        field("label", $.identifier),
        optional($._exp_object),
      )),
    )),

    throw_exp: $ => seq("throw", $._exp_nest),
    // TODO(id: prec.nonassoc)
    loop_exp: $ => prec.right(seq(
      "loop",
      field("body", $._exp_nest),
      optional(seq(
        "while",
        field("condition", $._exp_nest),
      ))
    )),
    while_exp: $ => choice(
      seq(
        "while",
        field("condition", $._exp_nullary_head),
        field("body", $._exp_nest),
      ),
      seq(
        "while",
        field("condition", $._exp_head),
        field("body", $.block_exp),
      ),
    ),
    // `for (p in e) body` is the legacy form; `for p in e { }` delimits
    // the pattern by `in` and the head by `{`.
    for_exp: $ => choice(
      seq(
        "for",
        "(",
        field("pattern", $._pat),
        "in",
        field("iterator", $._exp_object),
        ")",
        field("body", $._exp_nest),
      ),
      seq(
        "for",
        field("pattern", $._pat),
        "in",
        field("iterator", $._head),
        field("body", $.block_exp),
      ),
    ),
    do_exp: $ => seq("do", $.block_exp),
    switch_exp: $ => seq(
      "switch",
      field("scrutinee", $._head),
      "{",
      repeat(seq($.case, optional(";"))),
      "}",
    ),

    array_idx_exp_block: $ => mk_array_idx_exp($, "block"),
    dot_exp_block: $ => mk_dot_exp($, "block"),
    call_exp_block: $ => mk_call_exp($, "block"),
    call_exp_object: $ => mk_call_exp($, "object"),

    bin_exp_block: $ => mk_bin_exp($, "block"),
    bin_exp_object: $ => mk_bin_exp($, "object"),

    annot_exp_object: $ => mk_annot_exp($, "object"),

    binassign_exp_block: $ => mk_binassign_exp($, "block"),
    binassign_exp_object: $ => mk_binassign_exp($, "object"),

    coalesce_exp_object: $ => mk_coalesce_exp($, "object"),

    // NOTE(id: head-mode)
    case: $ => seq(
      "case",
      field("pattern", $._case_pat),
      field("body", $._exp_nest),
    ),

    // Case patterns that end unambiguously without parentheses:
    // `case null`, `case 0`, `case -1`, `case ?p`, `case #tag`, `case #tag(p)`.
    // A variant payload must be parenthesized so that in `case #tag { ... }` the braces are the case body.
    _case_pat: $ => choice(
      $._pat_nullary,
      alias($._case_tag_pat, $.tag_pat),
      alias($._case_quest_pat, $.quest_pat),
      $.unop_pat,
    ),
    // `case #tag (x) ...`: the parenthesized pattern is the payload, as in
    // the compiler, so a parenthesized bare body needs a payload first.
    exp_field: $ => seq(
      optional("var"),
      $.identifier,
      optional($.typ_annot),
      optional(seq(
        "=",
        $._exp_object,
      ))
    ),

    _typ_un: $ => choice(
      $._typ_nullary,
      $.quest_typ,
      $.weak_typ,
    ),
    _typ: $ => choice(
      $._typ_no_bin,
      $.and_typ,
      $.or_typ,
    ),
    path_typ: $ => seq(
      $.typ_path,
      optional(seq(
        // NOTE(id: leading-ws-bug)
        token.immediate("<"),
        comma_sep($._typ),
        ">",
      )),
    ),
    quest_typ: $ => seq("?", $._typ_un),
    _pat: $ => $._pat_bin,

    _pat_nullary: $ => choice(
      $._pat_plain,
      $.obj_pat,
    ),
    _pat_un: $ => choice(
      $._pat_nullary,
      $.tag_pat,
      $.quest_pat,
      // a signed literal is a unary pattern, as in the compiler: `? -1`
      $.unop_pat,
    ),
    _pat_bin: $ => choice(
      $._pat_un,
      $.alt_pat,
      $.and_pat,
      $.annot_pat,
    ),

    wild_pat: $ => "_",
    var_pat: $ => $.identifier,
    lit_pat: $ => $._literal,
    tup_pat: $ => seq(
      "(",
      comma_sep($._pat_bin),
      ")",
    ),
    tag_pat: $ => seq(
      $.tag_identifier,
      optional($._pat_nullary),
    ),
    quest_pat: $ => seq(
      "?",
      $._pat_un,
    ),
    annot_pat: $ => seq($._pat_bin, $.typ_annot),
    unop_pat: $ => seq($.unop, $._literal),
